# scholar-lens

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: test.yml
docs/: doc-type-text-quality-aware-brief-feedback.md  phase-6-2-execution-feedback.md  study-brief-quality-feedback.md
scholar_lens/: logging_config.py  scripts_utils.py
scholar_lens/agents/: __init__.py  doc_analyzer.py  explainer.py  orchestrator.py  prompts.py  state.py  tutor.py  validator.py
scholar_lens/api/: brief_builder.py  brief_graph.py  chat_graph.py  chat_service.py  deps.py  document_analysis.py  document_analysis_graph.py  main.py  memory_events.py  middleware.py  schemas.py
scholar_lens/core/: __init__.py  circuit_breaker.py  exceptions.py  graph_utils.py  llm_factory.py  models.py  settings.py  token_tracker.py  utils.py
scholar_lens/frontend/: app.py
scholar_lens/memory/: __init__.py  core_memory.py  document_memory.py  memory_graph.py  memory_manager.py  reflection_memory.py  structured_memory.py
scholar_lens/parsers/: __init__.py  chunker.py  enhancement_decision.py  enhancement_merge.py  math_normalizer.py  models.py  ocr_capabilities.py  ocr_diagnostics.py  ocr_executor.py  parse_quality.py  pdf_parser.py  ppt_parser.py  reference_extractor.py  vision_executor.py
scholar_lens/rag/: __init__.py  contextual_retrieval.py  document_index.py  document_store.py  layered_loader.py  reranker.py  retrieval_debug.py  retriever.py  vector_index.py  vectorstore.py
tests/: conftest.py
tests/integration/: test_api_http.py  test_end_to_end_session.py  test_langgraph_orchestration.py  test_parse_chunk_index_flow.py  test_retrieval_rerank_flow.py
tests/unit/: test_circuit_breaker.py  test_core_imports.py  test_exceptions.py  test_graph_utils.py  test_llm_factory.py  test_models.py  test_pdf_diagnostics.py  test_settings.py  test_token_tracker.py
web/: index.html  package-lock.json  package.json  vite.config.js  vite.config.test.mjs
web/src/: App.css  App.jsx  ChatPanel.jsx  ConfigPanel.jsx  MemoryPanel.jsx  NotesPanel.jsx  ReaderPanel.jsx  SectionsPanel.jsx  Sidebar.jsx  TranslatePanel.jsx  analysisPanelUtils.js  analysisPanelUtils.test.mjs  analyzeDocumentUtils.js  analyzeDocumentUtils.test.mjs  api.js  appChatPersistence.test.mjs  appTabs.test.mjs  appWorkspace.test.mjs  chatEvidence.js  chatEvidence.test.mjs  chatPanelLangGraph.test.mjs  configPanelUtils.js  (+19 more)
(+70 files in other folders)
