[project]
name = "scholar-lens"
version = "0.1.0"
description = "Educational agent system for reading English academic documents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "langgraph>=1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
rag = [
    "chromadb>=1.5",
    "rank-bm25>=0.7",
]
parsers = [
    "docling>=2.0",
    "python-pptx>=1.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
