[project]
name = "scholar-lens"
version = "0.1.0"
description = "Educational agent system for reading English academic documents"
requires-python = ">=3.11"
authors = [
    { name = "zy020" },
]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "langchain-core>=1.3",
    "langchain-openai>=1.2",
    "langgraph>=1.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "requests>=2.31",
    "onnxruntime-gpu>=1.18",
    "starlette>=0.38",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
]
rag = [
    "chromadb>=1.5",
    "rank-bm25>=0.2",
]
parsers = [
    "pymupdf>=1.24",
    "pdfplumber>=0.10",
    "rapidocr-onnxruntime>=1.3",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scholar_lens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--strict-markers", "-ra"]
markers = [
    "quick: <2 seconds, runs on every commit",
    "medium: <30 seconds, runs on every push",
    "slow: >30 seconds, runs daily",
    "llm: requires LLM API key",
]

[tool.coverage.run]
source = ["scholar_lens"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "class .*\\bProtocol\\):",
]
fail_under = 82

[tool.coverage.html]
directory = "htmlcov"
